# gearsets

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pages.yml
transmissions/: LIST.md  README.md  RUNS.md  RUNS_CLI.md  RUNS_RG.md  apis.py  app.py  cli.py  gui_core_trans.py  gui_log_trans.py  gui_utils_trans.py  io.py  model.py  module_loader.py  shift_schedule_builder.py  transmission_spec_builder.py  utils.py
transmissions/core/: clutch.py  planetary.py  shaft.py  solver.py
transmissions/docs/: api.rst  conf.py  index.rst
transmissions/in/: shift_schedule_allison_2k.json  shift_schedule_ford_10R80.json  shift_schedule_ford_c4.json  shift_schedule_w5a_580.json  shift_schedule_w7a_700.json  shift_schedule_w9a_700.json  shift_schedule_zf_4hp.json  shift_schedule_zf_5hp.json  shift_schedule_zf_8hp.json  transmission_spec_allison_2k.json  transmission_spec_ford_10R80.json  transmission_spec_ford_c4.json  transmission_spec_w5a_580.json  transmission_spec_w7a_700.json  transmission_spec_w9a_700.json  transmission_spec_zf_4hp.json  transmission_spec_zf_5hp.json  transmission_spec_zf_8hp.json
transmissions/kinematics/: gear_state_table.py  planetary_modes.py  planetary_ratio_map.py  ravigneaux_ratio_map.py  ravigneaux_solver.py  simpson_ratio_map.py  simpson_solver.py  willis.py
transmissions/transmissions/: eight_speed.py  five_speed.py  four_speed.py  nine_speed.py  seven_speed.py  six_speed.py  ten_speed.py  three_speed.py
